<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/x1"
                android:layout_width="142dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/x1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtX1"
                android:layout_width="158dp"
                android:layout_height="58dp"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/y1"
                android:layout_width="148dp"
                android:layout_height="53dp"
                android:gravity="center"
                android:text="@string/cy1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtY1"
                android:layout_width="156dp"
                android:layout_height="49dp"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/x2"
                android:layout_width="144dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/cx2"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtX2"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="140dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/cy2"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtY2"
                android:layout_width="158dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="228dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnPuntoMedio"
                android:layout_width="163dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:text="@string/botonPM" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPendiente"
                android:layout_width="165dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/botonPendiente" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCuadrante"
                android:layout_width="167dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/botonCuadrante" />
        </TableRow>

    </TableLayout>

</LinearLayout>